// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render a block list 1`] = `
<section
  class="blockCollection"
>
  <div
    class="sortableBlockList"
  >
    <section
      class="block"
    >
      <div
        class="handle"
      >
        <span
          aria-label="su-shift"
          class="sortableHandle su-shift"
        />
      </div>
      <div
        class="content"
      >
        <article />
      </div>
    </section>
    <section
      class="block"
    >
      <div
        class="handle"
      >
        <span
          aria-label="su-shift"
          class="sortableHandle su-shift"
        />
      </div>
      <div
        class="content"
      >
        <article />
      </div>
    </section>
  </div>
  <button
    class="button secondary"
    type="button"
  >
    <span
      class="text"
    >
      <span
        aria-label="su-plus"
        class="addButtonIcon su-plus"
      />
      Add block
    </span>
  </button>
</section>
`;

exports[`Should render a fully filled block list without add button if maxOccurs is reached 1`] = `
<section
  class="blockCollection"
>
  <div
    class="sortableBlockList"
  >
    <section
      class="block"
    >
      <div
        class="handle"
      >
        <span
          aria-label="su-shift"
          class="sortableHandle su-shift"
        />
      </div>
      <div
        class="content"
      >
        <article />
      </div>
    </section>
    <section
      class="block"
    >
      <div
        class="handle"
      >
        <span
          aria-label="su-shift"
          class="sortableHandle su-shift"
        />
      </div>
      <div
        class="content"
      >
        <article />
      </div>
    </section>
  </div>
  <button
    class="button secondary"
    disabled=""
    type="button"
  >
    <span
      class="text"
    >
      <span
        aria-label="su-plus"
        class="addButtonIcon su-plus"
      />
      Add block
    </span>
  </button>
</section>
`;

exports[`Should render an empty block list 1`] = `
<section
  class="blockCollection"
>
  <div
    class="sortableBlockList"
  />
  <button
    class="button secondary"
    type="button"
  >
    <span
      class="text"
    >
      <span
        aria-label="su-plus"
        class="addButtonIcon su-plus"
      />
      Add block
    </span>
  </button>
</section>
`;
